# NVDB-Skripting

./: .gitignore  main.py  pyproject.toml  test.json
Python/api/: __init__.py  hent_nvdb_data.py
Python/linestring_to_polygon/: linestring_to_polygon.py
rust/: Cargo.toml
rust/src/: lib.rs
src/api/: __init__.py  changeset.py  changesetSender.py  download_nvdb_data.py
src/geometry_conversions/: __init__.py  linestring_to_point.py  linestring_to_polygon.py
src/linestring_to_polygon/: linestring_to_polygon.py
