[project]
name = "nvdb-skripting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "maturin>=1.9.4",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "shapely>=2.1.1",
]

[tool.uv]
package = true
